--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.7.0",
     "@astrojs/rss": "^1.0.0",
     "astro": "^1.2.1",
     "reading-time": "^1.5.0",
