--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/image": "^0.7.0",
     "@astrojs/rss": "^1.0.0",
+    "@fontsource/poppins": "^4.5.9",
     "astro": "^1.2.1",
     "reading-time": "^1.5.0",
     "typewriter-effect": "^2.19.0"
