Feat: generate RSS feed

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/image": "^0.7.1",
     "@astrojs/mdx": "^0.11.1",
+    "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.1",
     "@fontsource/poppins": "^4.5.9",
