--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "dependencies": {
     "@astrojs/image": "^0.11.0",
     "@astrojs/mdx": "^0.11.5",
-    "@astrojs/rss": "^1.0.2",
+    "@astrojs/rss": "^1.0.3",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.1",
     "@fontsource/poppins": "^4.5.10",
-    "astro": "^1.5.3",
-    "daisyui": "^2.33.0",
+    "astro": "^1.6.1",
+    "daisyui": "^2.36.1",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.2.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7"
+    "@tailwindcss/typography": "^0.5.7",
+    "tailwind-scrollbar": "^2.0.1"
   }
 }
