--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && node build-sw.mjs",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -20,7 +20,8 @@
     "daisyui": "^2.38.0",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.2.1",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "workbox-build": "^6.5.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
