--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/poppins": "^4.5.10",
     "astro": "^1.6.3",
+    "astro-og-image": "^1.0.7",
     "daisyui": "^2.42.1",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.2.4",
