--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/poppins": "^4.5.10",
-    "astro": "^1.7.1",
+    "astro": "1.6.14",
     "astro-og-canvas": "^0.1.5",
     "daisyui": "^2.45.0",
     "reading-time": "^1.5.0",
