--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "astro build && node scripts/build.js && node build-sw.mjs",
+    "build": "astro build && node build-sw.mjs",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.16.3",
+    "@astrojs/image": "^0.16.4",
     "@astrojs/mdx": "^0.18.2",
-    "@astrojs/rss": "^2.3.1",
+    "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.1",
     "@astrojs/tailwind": "^3.1.1",
     "@fontsource/poppins": "^4.5.10",
-    "astro": "^2.1.8",
+    "@tinacms/cli": "^1.5.3",
+    "astro": "^2.1.9",
     "astro-og-canvas": "^0.1.7",
     "daisyui": "^2.51.5",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.3.1",
+    "tinacms": "^1.4.3",
     "typewriter-effect": "^2.19.0",
     "workbox-build": "^6.5.4"
   },
