--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.17.3",
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/rss": "^2.4.4",
-    "@astrojs/sitemap": "^1.3.3",
-    "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
     "@fontsource/poppins": "^5.0.8",
     "@tinacms/cli": "^1.5.29",
-    "astro": "^2.10.14",
+    "astro": "^3.0.7",
     "astro-og-canvas": "^0.1.8",
-    "daisyui": "^3.6.3",
+    "daisyui": "^3.6.4",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.3.3",
     "tinacms": "^1.5.20",
@@ -29,6 +29,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "tailwind-scrollbar": "^3.0.5"
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "typescript": "^5.2.2"
   }
 }
