--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md,css,html,yaml,astro}\"",
     "cms": "tinacms dev -c \"astro dev\"",
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,27 +12,27 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.18.0",
-    "@astrojs/mdx": "^1.1.3",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.2",
-    "@astrojs/tailwind": "^5.0.2",
-    "@fontsource/poppins": "^5.0.8",
-    "@tinacms/cli": "^1.5.31",
-    "astro": "^3.4.0",
-    "astro-og-canvas": "^0.2.1",
-    "daisyui": "^3.9.4",
+    "@astrojs/mdx": "^3.1.6",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/tailwind": "^5.1.1",
+    "@fontsource/poppins": "^5.1.0",
+    "@tinacms/cli": "^1.6.4",
+    "astro": "^4.15.7",
+    "astro-og-canvas": "^0.5.3",
+    "daisyui": "^4.12.10",
     "reading-time": "^1.5.0",
-    "tailwindcss": "^3.3.5",
-    "tinacms": "^1.5.22",
+    "tailwindcss": "^3.4.12",
+    "tinacms": "^2.2.4",
     "typewriter-effect": "^2.21.0",
-    "workbox-build": "^7.0.0"
+    "workbox-build": "^7.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.1",
-    "tailwind-scrollbar": "^3.0.5",
-    "typescript": "^5.2.2"
+    "@tailwindcss/typography": "^0.5.15",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwind-scrollbar": "^3.1.0",
+    "typescript": "^5.6.2"
   }
 }
