personalizing the site for Scarlett Danger

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "aleksa.codes",
-  "short_name": "aleksa.codes",
+  "name": "scarlettdanger.studio",
+  "short_name": "scarlettdanger.studio",
   "display": "standalone",
   "orientation": "portrait",
   "description": "Aleksa's personal website",
