--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.24",
+    "@iconify-json/simple-icons": "^1.2.21",
     "@tailwindcss/typography": "^0.5.16",
     "@types/netlify-identity-widget": "^1.9.6",
     "postcss": "^8.5.1",
