--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -61,8 +61,19 @@ collections:
           name: 'tags',
           widget: 'select',
           multiple: true,
-          options: ['Web Design', 'SEO'],
-          hint: 'Choose tags for your post',
+          options:
+            [
+              'Frontend',
+              'Backend',
+              'Development',
+              'JavaScript',
+              'TypeScript',
+              'CSS',
+              'Git',
+              'Tutorial',
+              'Best Practices',
+            ],
+          hint: 'Choose up to 3-4 tags for your post',
           required: false,
         }
       - {
