--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "license": "MIT",
-  "name": "astro-tailwind-decapcms-starterkit",
+  "name": "astro-portfolio-v2",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -38,7 +38,6 @@
     "@iconify-json/lucide": "^1.2.24",
     "@iconify-json/simple-icons": "^1.2.21",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/netlify-identity-widget": "^1.9.6",
     "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
     "prettier": "^3.4.2",
