--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@astrojs/mdx": "^4.0.7",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@tailwindcss/cli": "^4.0.0-beta.9",
-    "@tailwindcss/postcss": "^4.0.0-beta.9",
-    "@tailwindcss/vite": "^4.0.0-beta.9",
+    "@tailwindcss/cli": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@unpic/astro": "^1.0.0",
     "astro": "5.1.8",
     "astro-capo": "^0.0.1",
@@ -30,7 +30,7 @@
     "astro-icon": "^1.1.5",
     "astro-og-canvas": "^0.5.6",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^4.0.0-beta.9",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "typewriter-effect": "^2.21.0"
   },
