Chore: add blog post guide for running DeepSeek R1 on Windows with unsupported AMD GPU, update decap cms tag config

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -63,15 +63,17 @@ collections:
           multiple: true,
           options:
             [
-              'Frontend',
-              'Backend',
               'Development',
-              'JavaScript',
-              'TypeScript',
-              'CSS',
-              'Git',
-              'Tutorial',
               'Best Practices',
+              'Tutorial',
+              'Git',
+              'Frontend',
+              'Tailwind CSS',
+              'JavaScript',
+              'CSS',
+              'AI',
+              'LLM',
+              'Ollama',
             ],
           hint: 'Choose up to 3-4 tags for your post',
           required: false,
