--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -47,7 +47,7 @@ collections:
           hint: 'A brief description for SEO and social sharing',
         }
       - { label: 'Publish Date', name: 'date', widget: 'datetime', format: 'YYYY-MM-DD' }
-      # - { label: 'Author', name: 'author', widget: 'string', default: 'Aleksa' }
+      - { label: 'Author', name: 'author', widget: 'string', default: 'aleksa-codes' }
       - {
           label: 'Featured Image',
           name: 'thumbnail',
