--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "astro-og-canvas": "^0.5.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.5",
-    "typescript": "^5.7.2",
-    "typewriter-effect": "^2.21.0"
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.26",
