feat: preact portfolio ai chat bot

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/netlify": "^6.2.3",
+    "@astrojs/preact": "^4.0.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/cli": "^4.0.14",
@@ -33,7 +34,9 @@
     "astro-expressive-code": "^0.40.2",
     "astro-icon": "^1.1.5",
     "astro-og-canvas": "^0.7.0",
+    "lucide-preact": "^0.475.0",
     "marked": "^15.0.7",
+    "preact": "^10.26.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
