--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
     "decap": "bun x decap-server"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.1.10",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.0.8",
+    "@astrojs/netlify": "^6.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/cli": "^4.0.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
+    "ai": "^4.1.45",
     "astro": "5.3.0",
     "astro-capo": "^0.0.1",
     "astro-compress": "^2.3.6",
     "astro-expressive-code": "^0.40.2",
     "astro-icon": "^1.1.5",
     "astro-og-canvas": "^0.7.0",
+    "marked": "^15.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
