--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^1.1.14",
-    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/netlify": "^6.2.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@tailwindcss/cli": "^4.0.14",
-    "@tailwindcss/postcss": "^4.0.14",
-    "@tailwindcss/vite": "^4.0.14",
+    "@lottiefiles/dotlottie-web": "^0.41.0",
     "ai": "^4.1.61",
     "astro": "5.3.0",
     "astro-capo": "^0.0.1",
@@ -35,18 +32,22 @@
     "astro-og-canvas": "^0.7.0",
     "marked": "^15.0.7",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.14",
-    "typescript": "^5.8.2"
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "@iconify-json/lucide": "^1.2.29",
     "@iconify-json/lucide-lab": "^1.2.3",
     "@iconify-json/simple-icons": "^1.2.28",
+    "@tailwindcss/cli": "^4.0.14",
+    "@tailwindcss/postcss": "^4.0.14",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.0.14",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.8.2"
   }
 }
