--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
     "decap": "bun x decap-server"
   },
   "dependencies": {
-    "@ai-sdk/groq": "^1.2.7",
-    "@astrojs/mdx": "^4.2.3",
-    "@astrojs/netlify": "^6.2.5",
+    "@ai-sdk/groq": "^1.2.8",
+    "@astrojs/mdx": "^4.2.4",
+    "@astrojs/netlify": "^6.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@lottiefiles/dotlottie-web": "^0.42.0",
-    "ai": "^4.3.5",
-    "astro": "5.3.0",
+    "ai": "^4.3.7",
+    "astro": "^5.7.0",
     "astro-capo": "^0.0.1",
     "astro-compress": "^2.3.8",
-    "astro-expressive-code": "^0.40.2",
+    "astro-expressive-code": "^0.41.1",
     "astro-icon": "^1.1.5",
     "astro-og-canvas": "^0.7.0",
     "marked": "^15.0.8",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@iconify-json/lucide": "^1.2.35",
+    "@iconify-json/lucide": "^1.2.36",
     "@iconify-json/lucide-lab": "^1.2.3",
-    "@iconify-json/simple-icons": "^1.2.31",
-    "@tailwindcss/cli": "^4.1.3",
-    "@tailwindcss/postcss": "^4.1.3",
+    "@iconify-json/simple-icons": "^1.2.32",
+    "@tailwindcss/cli": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.4",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
     "prettier": "^3.5.3",
