feat: google analytics with partytown

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # GROQ API Key: https://console.groq.com/keys
 GROQ_API_KEY=""
+
+# Google Analytics: https://analytics.google.com/analytics/web/
+GA_ID="G-XXXXXXXXX"
