--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ai-sdk/groq": "^1.2.8",
     "@astrojs/mdx": "^4.2.5",
     "@astrojs/netlify": "^6.3.1",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
     "@lottiefiles/dotlottie-web": "^0.43.0",
