chore: bump deps, fix breaking astro/decap change, update decap version

--- a/package.json
+++ b/package.json
@@ -10,47 +10,47 @@
     "sync": "astro sync",
     "build:tailwind": "bun x @tailwindcss/cli -i src/styles/global.css -o dist/global.css --minify",
     "build:postcss": "postcss dist/global.css -o dist/global.css",
-    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md,css,html,yaml,astro}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md,css,html,yaml,astro}\"",
     "build": "astro check && astro build && bun run build:tailwind && bun run build:postcss",
     "preview": "astro preview --host",
     "prod": "bun run prettier && bun run build && bun run preview",
     "decap": "bun x decap-server"
   },
   "dependencies": {
-    "@ai-sdk/groq": "^2.0.22",
-    "@astrojs/mdx": "^4.3.6",
-    "@astrojs/netlify": "^6.5.11",
+    "@ai-sdk/groq": "^2.0.32",
+    "@astrojs/mdx": "^4.3.12",
+    "@astrojs/netlify": "^6.6.3",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/rss": "^4.0.12",
+    "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
-    "@lottiefiles/dotlottie-web": "^0.52.2",
-    "ai": "^5.0.56",
-    "astro": "^5.14.1",
+    "@lottiefiles/dotlottie-web": "^0.57.0",
+    "ai": "^5.0.104",
+    "astro": "^5.16.2",
     "astro-capo": "^0.0.1",
     "astro-compress": "^2.3.8",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
-    "astro-og-canvas": "^0.7.0",
-    "marked": "^16.3.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "astro-og-canvas": "^0.7.2",
+    "marked": "^17.0.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@iconify-json/iconoir": "^1.2.9",
-    "@iconify-json/lucide": "^1.2.68",
+    "@astrojs/check": "^0.9.6",
+    "@iconify-json/iconoir": "^1.2.10",
+    "@iconify-json/lucide": "^1.2.76",
     "@iconify-json/lucide-lab": "^1.2.3",
-    "@iconify-json/simple-icons": "^1.2.53",
+    "@iconify-json/simple-icons": "^1.2.60",
     "@iconify-json/tabler": "^1.2.23",
-    "@tailwindcss/cli": "^4.1.13",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.17",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.1",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "typescript": "^5.9.2"
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "typescript": "^5.9.3"
   }
 }
