chore: bump deps, update scripts and readme

--- a/package.json
+++ b/package.json
@@ -5,52 +5,53 @@
   "version": "0.0.1",
   "scripts": {
     "astro": "astro",
-    "dev": "astro dev --host",
+    "dev": "astro dev",
+    "dev:host": "astro dev --host",
     "start": "astro dev",
     "sync": "astro sync",
+    "format": "prettier --write .",
     "build:tailwind": "bun x @tailwindcss/cli -i src/styles/global.css -o dist/global.css --minify",
     "build:postcss": "postcss dist/global.css -o dist/global.css",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md,css,html,yaml,astro}\"",
     "build": "astro check && astro build && bun run build:tailwind && bun run build:postcss",
-    "preview": "astro preview --host",
-    "prod": "bun run prettier && bun run build && bun run preview",
+    "preview": "astro preview",
+    "prod": "bun run format && bun run build && bun run preview",
     "decap": "bun x decap-server"
   },
   "dependencies": {
-    "@ai-sdk/groq": "^2.0.32",
-    "@astrojs/mdx": "^4.3.12",
+    "@ai-sdk/groq": "^2.0.33",
+    "@astrojs/mdx": "^4.3.13",
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
-    "@lottiefiles/dotlottie-web": "^0.57.0",
-    "ai": "^5.0.104",
-    "astro": "^5.16.2",
+    "@lottiefiles/dotlottie-web": "^0.58.1",
+    "ai": "^5.0.116",
+    "astro": "^5.16.6",
     "astro-capo": "^0.0.1",
     "astro-compress": "^2.3.8",
-    "astro-expressive-code": "^0.41.3",
+    "astro-expressive-code": "^0.41.5",
     "astro-icon": "^1.1.5",
     "astro-og-canvas": "^0.7.2",
     "marked": "^17.0.1",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@iconify-json/iconoir": "^1.2.10",
-    "@iconify-json/lucide": "^1.2.76",
+    "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/lucide-lab": "^1.2.3",
-    "@iconify-json/simple-icons": "^1.2.60",
-    "@iconify-json/tabler": "^1.2.23",
-    "@tailwindcss/cli": "^4.1.17",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@iconify-json/simple-icons": "^1.2.63",
+    "@iconify-json/tabler": "^1.2.24",
+    "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.18",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "prettier": "^3.7.1",
+    "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.7.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3"
   }
 }
